--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gray-matter": "^4.0.3",
     "gsap": "^3.14.2",
     "lenis": "^1.3.16",
+    "mathjs": "^15.1.0",
     "next": "16.1.0",
     "next-mdx-remote": "^5.0.0",
     "react": "19.2.3",
