--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/d3-force": "^3.0.10",
     "@types/three": "^0.182.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3-force": "^3.0.0",
     "gray-matter": "^4.0.3",
     "gsap": "^3.14.2",
     "lenis": "^1.3.16",
+    "lucide-react": "^0.562.0",
     "mathjs": "^15.1.0",
+    "motion": "^12.23.26",
     "next": "16.1.0",
     "next-mdx-remote": "^5.0.0",
     "react": "19.2.3",
@@ -34,6 +39,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
