--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-mdx-remote": "^5.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0"
