--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "16.1.0",
     "next-mdx-remote": "^5.0.0",
     "react": "19.2.3",
+    "react-calendly": "^4.4.0",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
