--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.4.2",
+    "@react-three/fiber": "^9.5.0",
     "@tailwindcss/typography": "^0.5.19",
     "@types/d3-force": "^3.0.10",
     "@types/three": "^0.182.0",
@@ -22,7 +22,7 @@
     "lenis": "^1.3.16",
     "lucide-react": "^0.562.0",
     "mathjs": "^15.1.0",
-    "motion": "^12.23.26",
+    "motion": "^12.34.3",
     "next": "16.1.0",
     "next-mdx-remote": "^6.0.0",
     "react": "19.2.3",
@@ -31,7 +31,8 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.4.0",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "three-globe": "^2.45.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
